--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -2,5 +2,6 @@
   "homePageTitle": "Home Page",
   "muyuPageTitle": "muyu Game",
   "guessPageTitle": "Guess Number",
-  "paperPageTitle": "Draw Pictures"
+  "paperPageTitle": "Draw Pictures",
+  "mainPageTitle": "Main Page"
 }
