--- a/lib/l10n/arb/intl_zh.arb
+++ b/lib/l10n/arb/intl_zh.arb
@@ -2,5 +2,6 @@
   "homePageTitle": "我的",
   "muyuPageTitle": "敲木鱼游戏",
   "guessPageTitle": "猜数字",
-  "paperPageTitle": "画图"
+  "paperPageTitle": "画图",
+  "mainPageTitle": "主页"
 }
