--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -4,6 +4,32 @@
   "guessPageTitle": "Guess Number",
   "paperPageTitle": "Draw Pictures",
   "mainPageTitle": "Main Page",
+  "languageSettingPageTitle": "Language Settings",
   "chinese": "Chinese",
-  "english": "English"
+  "english": "English",
+  "mainTitle": "Mini Game",
+  "isBig":"Big",
+  "isSmall": "Small",
+  "clickGenerateNum": "Click button to generate a random number",
+  "generateNum": "Generate a random number",
+  "muyuPageAppbar": "Electronic Muyu",
+  "meritRecord": "Merit record",
+  "cleanTipTitle": "Clear prompt",
+  "paperPageCleanTip": "The current operation will clear the drawing content. Please confirm if you want to continue!",
+  "conform": "Conform",
+  "darkMode": "Dark Mode",
+  "themeSettings": "Theme Settings",
+  "languageSettings": "Language Settings",
+  "aboutApp": "About App",
+  "followSystem": "Follow The System",
+  "darkModePageTitle": "Dark Mode Settings",
+  "manualSetting": "Manual setting",
+  "lightMode": "Light Mode",
+  "guessPageTooltip": "Enter a number between 0 and 99",
+  "merit": "Merit",
+  "musicSelect": "Choice of Music",
+  "muyuSelect": "Choice of Muyu",
+  "cancel": "Cancel",
+  "paperPageAppbar": "Drawing Board",
+  "delete": "Delete"
 }
