--- a/lib/l10n/arb/intl_zh.arb
+++ b/lib/l10n/arb/intl_zh.arb
@@ -4,6 +4,32 @@
   "guessPageTitle": "猜数字",
   "paperPageTitle": "画图",
   "mainPageTitle": "主页",
+  "languageSettingPageTitle": "语言设置",
   "chinese": "中文",
-  "english": "英文"
+  "english": "英文",
+  "mainTitle": "小游戏",
+  "isBig":"大了",
+  "isSmall": "小了",
+  "clickGenerateNum": "点击右下角按钮生成随机数",
+  "generateNum": "生成随机数",
+  "muyuPageAppbar": "电子木鱼",
+  "meritRecord": "功德记录",
+  "cleanTipTitle": "清空提示",
+  "paperPageCleanTip": "当前操作会清空画图内容，请确实是否继续!",
+  "conform": "确认",
+  "darkMode": "深色模式",
+  "themeSettings": "主题设置",
+  "languageSettings": "语言设置",
+  "aboutApp": "关于应用",
+  "followSystem": "跟随系统",
+  "darkModePageTitle": "深色模式设置",
+  "manualSetting": "手动设置",
+  "lightMode": "浅色模式",
+  "guessPageTooltip": "输入 0~99 之间的数字",
+  "merit": "功德",
+  "musicSelect": "音乐选择",
+  "muyuSelect": "木鱼选择",
+  "cancel": "取消",
+  "paperPageAppbar": "画板",
+  "delete": "删除"
 }
